tests/error/enum_errors/duplicate_variant.py
from guppylang.decorator import guppy


@guppy.enum
class MyEnum:
    var1 = {"x": int}
    var1 = {"x": bool}


MyEnum.compile()
