tests/error/enum_errors/duplicate_variant.err
Error: Duplicate variant (at $FILE:7:4)
  | 
5 | class MyEnum:
6 |     var1 = {"x": int}
7 |     var1 = {"x": bool}
  |     ^^^^ Enum `MyEnum` already contains a variant named `var1`

Guppy compilation failed due to 1 previous error
